add husky and lint staged

--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint-plugin-react-hooks": "^1.6.0",
-    "gatsby": "2.2.8",
-    "gatsby-cli": "2.4.17",
-    "gatsby-image": "^2.0.34",
+    "gatsby": "^2.3.3",
+    "gatsby-cli": "^2.5.3",
+    "gatsby-image": "^2.0.35",
     "gatsby-mdx": "^0.4.4",
     "gatsby-plugin-feed": "^2.1.0",
-    "gatsby-plugin-google-analytics": "^2.0.17",
-    "gatsby-plugin-manifest": "^2.0.24",
+    "gatsby-plugin-google-analytics": "^2.0.18",
+    "gatsby-plugin-manifest": "^2.0.25",
     "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "3.0.10",
+    "gatsby-plugin-react-helmet": "^3.0.11",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.0.30",
+    "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-svgr": "^2.0.2",
@@ -36,31 +36,31 @@
     "gatsby-remark-prismjs": "^3.2.6",
     "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-remark-smartypants": "^2.0.9",
-    "gatsby-source-filesystem": "2.0.26",
+    "gatsby-source-filesystem": "2.0.28",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
-    "prismjs": "^1.15.0",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
+    "prismjs": "^1.16.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.5.0",
     "react-pose": "^4.0.8",
     "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.19",
     "serve": "^10.1.2",
-    "styled-components": "^4.1.3",
+    "styled-components": "^4.2.0",
     "styled-theming": "^2.2.0",
     "typeface-raleway": "^0.0.54",
     "typography": "^0.16.19"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
-    "@octokit/rest": "^16.20.0",
-    "@storybook/addon-actions": "^5.0.3",
-    "@storybook/addon-links": "^5.0.3",
-    "@storybook/addons": "^5.0.3",
-    "@storybook/react": "^5.0.3",
+    "@octokit/rest": "^16.21.0",
+    "@storybook/addon-actions": "^5.0.5",
+    "@storybook/addon-links": "^5.0.5",
+    "@storybook/addons": "^5.0.5",
+    "@storybook/react": "^5.0.5",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "bundlesize": "^0.17.1",
@@ -71,7 +71,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "gatsby-plugin-eslint": "^2.0.4",
+    "husky": "^1.3.1",
     "lighthouse-ci": "1.4.1",
+    "lint-staged": "^8.1.5",
     "now": "^14.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
@@ -86,7 +88,7 @@
   "main": "n/a",
   "scripts": {
     "build": "PUBLISH_ON_NOW=branch-deploy gatsby build",
-    "build:production": "PUBLISH_ON_NOW=production gatsby build",
+    "build:prod": "PUBLISH_ON_NOW=production gatsby build",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "start": "serve public/",
@@ -102,6 +104,7 @@
     "deploy:prod": "now ./public --local-config=../now.prod.json",
     "alias": "now alias --token=$NOW_TOKEN",
     "alias:prod": "now alias --token=$NOW_TOKEN --local-config=./now.prod.json",
+    "build-deploy-and-alias-prod": "npm-run-all -s build:prod deploy:prod alias:prod",
     "lighthouse": "lighthouse-ci https://jcofman.now.sh --score=90 --performance=85 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
     "storybook": "start-storybook -p 6006",
     "build:storybook": "build-storybook",
