--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint-plugin-react-hooks": "^1.6.0",
-    "gatsby": "^2.3.3",
+    "gatsby": "^2.3.4",
     "gatsby-cli": "^2.5.3",
     "gatsby-image": "^2.0.35",
     "gatsby-mdx": "^0.4.4",
@@ -61,22 +61,32 @@
     "@storybook/addon-links": "^5.0.5",
     "@storybook/addons": "^5.0.5",
     "@storybook/react": "^5.0.5",
+    "@storybook/theming": "^5.0.5",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
+    "babel-preset-gatsby": "^0.1.10",
     "bundlesize": "^0.17.1",
     "cypress": "^3.2.0",
     "cypress-testing-library": "^2.3.6",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-cypress": "^2.2.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "gatsby-plugin-eslint": "^2.0.4",
     "husky": "^1.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.5.0",
+    "jest-dom": "^3.1.3",
+    "jest-styled-components": "^6.3.1",
     "lighthouse-ci": "1.4.1",
     "lint-staged": "^8.1.5",
     "now": "^14.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
+    "react-test-renderer": "^16.8.6",
+    "react-testing-library": "^6.0.3",
     "size-limit": "^0.21.1",
     "start-server-and-test": "^1.7.12",
     "webpagetest": "^0.3.9"
@@ -93,6 +103,8 @@
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
     "start": "serve public/",
     "start:ci": "serve --no-clipboard --listen 8899",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "test:size": "npm-run-all -p test:size:bundlesize test:size:size-limit",
     "test:size:bundlesize": "bundlesize",
     "test:size:size-limit": "size-limit",
