--- a/package.json
+++ b/package.json
@@ -112,17 +112,14 @@
     "test:e2e:dev": "start-server-and-test dev http://localhost:8000 cy:dev",
     "cy:run": "cypress run",
     "cy:dev": "cypress open",
-    "deploy": "now ./public --local-config=../now.json",
-    "deploy:prod": "now ./public --local-config=../now.prod.json",
-    "alias": "now alias --token=$NOW_TOKEN",
-    "alias:prod": "now alias --token=$NOW_TOKEN --local-config=./now.prod.json",
-    "build-deploy-and-alias-prod": "npm-run-all -s build:prod deploy:prod alias:prod",
+    "deploy": "now ./public --token=$NOW_TOKEN --target staging --local-config=../now.json",
+    "deploy:prod": "now ./public --token=$NOW_TOKEN --target production --local-config=../now.json",
+    "build-deploy-and-alias-prod": "npm-run-all -s build:prod deploy:prod",
     "lighthouse": "lighthouse-ci https://jcofman.now.sh --score=90 --performance=85 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
     "storybook": "start-storybook -p 6006",
     "build:storybook": "build-storybook",
-    "deploy:storybook": "now ./storybook-static --local-config=../now.storybook.json",
-    "alias:storybook": "now alias --token=$NOW_TOKEN --local-config=./now.storybook.json",
-    "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook alias:storybook"
+    "deploy:storybook": "now ./storybook-static --token=$NOW_TOKEN --target production --local-config=../now.storybook.json",
+    "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook"
   },
   "bundlesize": [
     {
