--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
 script:
   - yarn build-deploy-and-alias-storybook # build and deploy storybook.jcofman.de
   # deploy to staging if not master and deploy to jcofman.de if master
-  - if [ $BRANCH = master ]; then NOW_URL="$(now ./public --token=$NOW_TOKEN --target production --local-config=../now.json)"; else NOW_URL="$(now ./public --token=$NOW_TOKEN --target staging --local-config=../now.json);fi
+  - if [ $BRANCH = master ]; then NOW_URL="$(now ./public --token=$NOW_TOKEN --target production --local-config=../now.json)"; else NOW_URL="$(now ./public --token=$NOW_TOKEN --target staging --local-config=../now.json)";fi
   # store deployment url from clipboard into the deployment url
   - echo $NOW_URL
 
