--- a/package.json
+++ b/package.json
@@ -9,89 +9,102 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.0.18",
+    "@mdx-js/mdx": "^1.0.21",
     "@mdx-js/tag": "^0.20.3",
-    "axios": "^0.18.0",
-    "babel-plugin-styled-components": "^1.10.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "gatsby": "^2.4.2",
-    "gatsby-cli": "^2.5.12",
-    "gatsby-image": "^2.0.41",
+    "acorn": "^6.2.0",
+    "algoliasearch": "^3.33.0",
+    "axios": "^0.19.0",
+    "babel-plugin-styled-components": "^1.10.6",
+    "downshift": "^3.2.10",
+    "eslint-plugin-react-hooks": "^1.6.1",
+    "gatsby": "^2.13.4",
+    "gatsby-cli": "^2.7.8",
+    "gatsby-image": "^2.2.4",
     "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-feed": "^2.2.0",
-    "gatsby-plugin-google-analytics": "^2.0.19",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-algolia": "^0.3.2",
+    "gatsby-plugin-feed": "^2.3.2",
+    "gatsby-plugin-google-analytics": "^2.1.1",
+    "gatsby-plugin-manifest": "^2.2.1",
+    "gatsby-plugin-offline": "^2.2.1",
+    "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.0.36",
-    "gatsby-plugin-sitemap": "^2.1.0",
-    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-sharp": "^2.2.2",
+    "gatsby-plugin-sitemap": "^2.2.1",
+    "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.4",
+    "gatsby-plugin-typography": "^2.3.0",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^1.7.1",
-    "gatsby-remark-images": "^3.0.11",
-    "gatsby-remark-prismjs": "^3.2.9",
-    "gatsby-remark-responsive-iframe": "^2.1.1",
-    "gatsby-remark-smartypants": "^2.0.9",
-    "gatsby-source-filesystem": "2.0.33",
-    "gatsby-transformer-json": "^2.1.11",
-    "gatsby-transformer-remark": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.1.19",
-    "polished": "^3.3.0",
+    "gatsby-remark-images": "^3.1.3",
+    "gatsby-remark-prismjs": "^3.3.1",
+    "gatsby-remark-responsive-iframe": "^2.2.1",
+    "gatsby-remark-smartypants": "^2.1.0",
+    "gatsby-source-filesystem": "2.1.2",
+    "gatsby-transformer-json": "^2.2.0",
+    "gatsby-transformer-remark": "^2.6.0",
+    "gatsby-transformer-sharp": "^2.2.1",
+    "polished": "^3.4.1",
     "prismjs": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.6.1",
+    "react-icons": "^3.7.0",
+    "react-instantsearch-dom": "^5.7.0",
     "react-pose": "^4.0.8",
     "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.19",
-    "serve": "^11.0.0",
-    "styled-components": "^4.2.0",
+    "serve": "^11.0.2",
+    "styled-components": "^4.3.2",
     "styled-theming": "^2.2.0",
     "typeface-raleway": "^0.0.54",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@octokit/rest": "^16.25.2",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-links": "^5.0.11",
-    "@storybook/addons": "^5.0.11",
-    "@storybook/react": "^5.0.11",
-    "@storybook/theming": "^5.0.11",
-    "babel-eslint": "^10.0.1",
+    "@babel/core": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "@babel/preset-react": "^7.0.0",
+    "@octokit/rest": "^16.28.2",
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-links": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/react": "^5.1.9",
+    "@storybook/theming": "^5.1.9",
+    "acorn-dynamic-import": "^4.0.0",
+    "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.5",
-    "babel-preset-gatsby": "^0.1.11",
-    "bundlesize": "^0.17.1",
-    "cypress": "^3.2.0",
-    "cypress-testing-library": "^3.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-loader": "^2.1.2",
+    "babel-loader": "^8.0.6",
+    "babel-preset-gatsby": "^0.2.0",
+    "bundlesize": "^0.18.0",
+    "cypress": "^3.3.2",
+    "cypress-testing-library": "^4.0.0",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
     "gatsby-plugin-eslint": "^2.0.5",
-    "husky": "^2.2.0",
+    "husky": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.8.0",
-    "jest-dom": "^3.1.4",
-    "jest-styled-components": "^6.3.1",
-    "lighthouse-ci": "1.6.0",
-    "lint-staged": "^8.1.6",
-    "now": "^15.1.0",
+    "jest-dom": "^3.5.0",
+    "jest-styled-components": "^6.3.3",
+    "jsdom": "^15.1.1",
+    "lighthouse-ci": "1.9.0",
+    "lint-staged": "^9.0.2",
+    "now": "^15.6.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.17.0",
+    "prettier": "^1.18.2",
     "react-test-renderer": "^16.8.6",
-    "react-testing-library": "^7.0.0",
-    "size-limit": "^1.3.1",
-    "start-server-and-test": "^1.9.0",
+    "react-testing-library": "^8.0.1",
+    "size-limit": "^1.3.7",
+    "start-server-and-test": "^1.9.1",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
@@ -104,9 +117,9 @@
     "build:prod": "PUBLISH_ON_NOW=production gatsby build",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
-    "start": "serve public/",
+    "start": "npm-run-all dev",
     "start:ci": "serve --no-clipboard --listen 8899",
-    "test": "jest",
+    "test": "jest --env=jsdom",
     "test:watch": "jest --watch",
     "test:size": "npm-run-all -p test:size:bundlesize test:size:size-limit",
     "test:size:bundlesize": "bundlesize",
@@ -119,8 +132,8 @@
     "deploy:prod": "now ./public --token=$NOW_TOKEN --target production --local-config=../now.json",
     "build-deploy-and-alias-prod": "npm-run-all -s build:prod deploy:prod",
     "lighthouse": "lighthouse-ci https://jcofman.now.sh --score=90 --performance=85 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
-    "storybook": "start-storybook -p 6006",
-    "build:storybook": "build-storybook",
+    "storybook": "NODE_ENV=production start-storybook -p 6006",
+    "build:storybook": "NODE_ENV=production build-storybook",
     "deploy:storybook": "now ./storybook-static --token=$NOW_TOKEN --target production --local-config=../now.storybook.json",
     "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook"
   },
