--- a/package.json
+++ b/package.json
@@ -9,102 +9,106 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.0.21",
+    "@mdx-js/mdx": "^1.4.5",
+    "@mdx-js/react": "^1.4.5",
     "@mdx-js/tag": "^0.20.3",
-    "acorn": "^6.2.0",
-    "algoliasearch": "^3.33.0",
+    "acorn": "^7.0.0",
+    "algoliasearch": "^3.34.0",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "downshift": "^3.2.10",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "gatsby": "^2.13.4",
-    "gatsby-cli": "^2.7.8",
-    "gatsby-image": "^2.2.4",
-    "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-algolia": "^0.3.2",
-    "gatsby-plugin-feed": "^2.3.2",
-    "gatsby-plugin-google-analytics": "^2.1.1",
-    "gatsby-plugin-manifest": "^2.2.1",
-    "gatsby-plugin-offline": "^2.2.1",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-react-svg": "^2.1.1",
-    "gatsby-plugin-robots-txt": "^1.4.0",
-    "gatsby-plugin-sharp": "^2.2.2",
-    "gatsby-plugin-sitemap": "^2.2.1",
-    "gatsby-plugin-styled-components": "^3.1.0",
+    "classnames": "^2.2.6",
+    "downshift": "^3.2.14",
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "framer-motion": "^1.6.7",
+    "gatsby": "^2.15.9",
+    "gatsby-cli": "^2.7.44",
+    "gatsby-image": "^2.2.17",
+    "gatsby-plugin-algolia": "^0.3.3",
+    "gatsby-plugin-feed": "^2.3.11",
+    "gatsby-plugin-google-analytics": "^2.1.13",
+    "gatsby-plugin-manifest": "^2.2.13",
+    "gatsby-plugin-mdx": "^1.0.43",
+    "gatsby-plugin-offline": "^3.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.6",
+    "gatsby-plugin-react-svg": "^2.1.2",
+    "gatsby-plugin-robots-txt": "^1.5.0",
+    "gatsby-plugin-sharp": "^2.2.20",
+    "gatsby-plugin-sitemap": "^2.2.10",
+    "gatsby-plugin-styled-components": "^3.1.4",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.3.0",
+    "gatsby-plugin-typography": "^2.3.6",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^1.7.1",
-    "gatsby-remark-images": "^3.1.3",
-    "gatsby-remark-prismjs": "^3.3.1",
-    "gatsby-remark-responsive-iframe": "^2.2.1",
-    "gatsby-remark-smartypants": "^2.1.0",
-    "gatsby-source-filesystem": "2.1.2",
-    "gatsby-transformer-json": "^2.2.0",
-    "gatsby-transformer-remark": "^2.6.0",
-    "gatsby-transformer-sharp": "^2.2.1",
+    "gatsby-remark-images": "^3.1.20",
+    "gatsby-remark-prismjs": "^3.3.12",
+    "gatsby-remark-responsive-iframe": "^2.2.11",
+    "gatsby-remark-smartypants": "^2.1.6",
+    "gatsby-source-filesystem": "2.1.19",
+    "gatsby-transformer-json": "^2.2.7",
+    "gatsby-transformer-remark": "^2.6.21",
+    "gatsby-transformer-sharp": "^2.2.13",
     "polished": "^3.4.1",
-    "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "prismjs": "^1.17.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-instantsearch-dom": "^5.7.0",
-    "react-pose": "^4.0.8",
     "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.19",
-    "serve": "^11.0.2",
+    "serve": "^11.1.0",
     "styled-components": "^4.3.2",
     "styled-theming": "^2.2.0",
-    "typeface-raleway": "^0.0.54",
+    "typeface-raleway": "^0.0.75",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
-    "@babel/preset-env": "^7.5.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "@octokit/rest": "^16.28.2",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
-    "@storybook/theming": "^5.1.9",
+    "@octokit/rest": "^16.28.9",
+    "@storybook/addon-a11y": "^5.2.1",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "@storybook/theming": "^5.2.1",
+    "@testing-library/cypress": "^5.0.1",
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.1.4",
     "acorn-dynamic-import": "^4.0.0",
-    "babel-eslint": "^10.0.2",
-    "babel-jest": "^24.8.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-gatsby": "^0.2.0",
+    "babel-preset-gatsby": "^0.2.13",
     "bundlesize": "^0.18.0",
-    "cypress": "^3.3.2",
-    "cypress-testing-library": "^4.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-import": "^2.18.0",
+    "core-js": "3.2.1",
+    "cypress": "^3.4.1",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-cypress": "^2.6.1",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react": "^7.14.3",
     "gatsby-plugin-eslint": "^2.0.5",
-    "husky": "^3.0.0",
+    "husky": "^3.0.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
-    "jest-dom": "^3.5.0",
+    "jest": "^24.9.0",
     "jest-styled-components": "^6.3.3",
     "jsdom": "^15.1.1",
-    "lighthouse-ci": "1.9.0",
-    "lint-staged": "^9.0.2",
-    "now": "^15.6.2",
+    "lighthouse-ci": "1.10.0",
+    "lint-staged": "^9.2.5",
+    "now": "^16.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
-    "react-test-renderer": "^16.8.6",
-    "react-testing-library": "^8.0.1",
-    "size-limit": "^1.3.7",
-    "start-server-and-test": "^1.9.1",
+    "react-test-renderer": "^16.9.0",
+    "size-limit": "^2.1.5",
+    "start-server-and-test": "^1.10.2",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
@@ -115,9 +119,10 @@
   "scripts": {
     "build": "PUBLISH_ON_NOW=branch-deploy gatsby build",
     "build:prod": "PUBLISH_ON_NOW=production gatsby build",
+    "develop": "npm-run-all -p dev storybook",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
-    "start": "npm-run-all dev",
+    "start": "npm-run-all -p dev storybook",
     "start:ci": "serve --no-clipboard --listen 8899",
     "test": "jest --env=jsdom",
     "test:watch": "jest --watch",
@@ -135,7 +140,8 @@
     "storybook": "NODE_ENV=production start-storybook -p 6006",
     "build:storybook": "NODE_ENV=production build-storybook",
     "deploy:storybook": "now ./storybook-static --token=$NOW_TOKEN --target production --local-config=../now.storybook.json",
-    "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook"
+    "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook",
+    "clean": "gatsby clean"
   },
   "bundlesize": [
     {
