--- a/package.json
+++ b/package.json
@@ -9,44 +9,43 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.4.5",
-    "@mdx-js/react": "^1.4.5",
+    "@mdx-js/mdx": "^1.5.0",
+    "@mdx-js/react": "^1.5.0",
     "@mdx-js/tag": "^0.20.3",
     "acorn": "^7.0.0",
     "algoliasearch": "^3.34.0",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "classnames": "^2.2.6",
-    "downshift": "^3.2.14",
+    "downshift": "^3.3.1",
     "eslint-plugin-react-hooks": "^2.0.1",
     "framer-motion": "^1.6.7",
-    "gatsby": "^2.15.9",
-    "gatsby-cli": "^2.7.44",
-    "gatsby-image": "^2.2.17",
-    "gatsby-plugin-algolia": "^0.3.3",
-    "gatsby-plugin-feed": "^2.3.11",
-    "gatsby-plugin-google-analytics": "^2.1.13",
-    "gatsby-plugin-manifest": "^2.2.13",
-    "gatsby-plugin-mdx": "^1.0.43",
-    "gatsby-plugin-offline": "^3.0.1",
-    "gatsby-plugin-react-helmet": "^3.1.6",
+    "gatsby": "^2.15.22",
+    "gatsby-cli": "^2.7.50",
+    "gatsby-image": "^2.2.21",
+    "gatsby-plugin-algolia": "^0.3.4",
+    "gatsby-plugin-feed": "^2.3.13",
+    "gatsby-plugin-google-analytics": "^2.1.17",
+    "gatsby-plugin-manifest": "^2.2.18",
+    "gatsby-plugin-mdx": "^1.0.44",
+    "gatsby-plugin-offline": "^3.0.8",
+    "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.20",
-    "gatsby-plugin-sitemap": "^2.2.10",
-    "gatsby-plugin-styled-components": "^3.1.4",
+    "gatsby-plugin-sharp": "^2.2.25",
+    "gatsby-plugin-sitemap": "^2.2.14",
+    "gatsby-plugin-styled-components": "^3.1.6",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.3.6",
+    "gatsby-plugin-typography": "^2.3.8",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-embed-video": "^1.7.1",
-    "gatsby-remark-images": "^3.1.20",
-    "gatsby-remark-prismjs": "^3.3.12",
-    "gatsby-remark-responsive-iframe": "^2.2.11",
-    "gatsby-remark-smartypants": "^2.1.6",
-    "gatsby-source-filesystem": "2.1.19",
-    "gatsby-transformer-json": "^2.2.7",
-    "gatsby-transformer-remark": "^2.6.21",
-    "gatsby-transformer-sharp": "^2.2.13",
+    "gatsby-remark-embed-video": "^2.0.0",
+    "gatsby-remark-images": "^3.1.23",
+    "gatsby-remark-prismjs": "^3.3.14",
+    "gatsby-remark-responsive-iframe": "^2.2.18",
+    "gatsby-remark-smartypants": "^2.1.9",
+    "gatsby-source-filesystem": "2.1.26",
+    "gatsby-transformer-json": "^2.2.9",
+    "gatsby-transformer-remark": "^2.6.24",
+    "gatsby-transformer-sharp": "^2.2.17",
     "polished": "^3.4.1",
     "prismjs": "^1.17.1",
     "react": "^16.9.0",
@@ -57,19 +56,19 @@
     "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.19",
     "serve": "^11.1.0",
-    "styled-components": "^4.3.2",
+    "styled-components": "^4.4.0",
     "styled-theming": "^2.2.0",
     "typeface-raleway": "^0.0.75",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
+    "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
-    "@octokit/rest": "^16.28.9",
+    "@octokit/rest": "^16.30.1",
     "@storybook/addon-a11y": "^5.2.1",
     "@storybook/addon-actions": "^5.2.1",
     "@storybook/addon-links": "^5.2.1",
@@ -83,13 +82,14 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-gatsby": "^0.2.13",
+    "babel-preset-gatsby": "^0.2.14",
     "bundlesize": "^0.18.0",
     "core-js": "3.2.1",
     "cypress": "^3.4.1",
+    "cz-conventional-changelog": "3.0.2",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-react-app": "^5.0.1",
+    "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "^3.0.0",
     "eslint-plugin-cypress": "^2.6.1",
     "eslint-plugin-import": "^2.18.2",
@@ -102,12 +102,12 @@
     "jest-styled-components": "^6.3.3",
     "jsdom": "^15.1.1",
     "lighthouse-ci": "1.10.0",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^9.3.0",
     "now": "^16.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.9.0",
-    "size-limit": "^2.1.5",
+    "size-limit": "^2.1.6",
     "start-server-and-test": "^1.10.2",
     "webpagetest": "^0.3.9"
   },
@@ -162,5 +162,10 @@
       "webpack": false,
       "limit": "500 KB"
     }
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
