--- a/package.json
+++ b/package.json
@@ -107,7 +107,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.9.0",
-    "size-limit": "^2.1.6",
     "start-server-and-test": "^1.10.2",
     "webpagetest": "^0.3.9"
   },
@@ -126,9 +125,8 @@
     "start:ci": "serve --no-clipboard --listen 8899",
     "test": "jest --env=jsdom",
     "test:watch": "jest --watch",
-    "test:size": "npm-run-all -p test:size:bundlesize test:size:size-limit",
+    "test:size": "npm-run-all -p test:size:bundlesize",
     "test:size:bundlesize": "bundlesize",
-    "test:size:size-limit": "size-limit",
     "test:e2e:ci": "start-server-and-test start:ci http://localhost:8000 cy:run",
     "test:e2e:dev": "start-server-and-test dev http://localhost:8000 cy:dev",
     "cy:run": "cypress run",
@@ -151,16 +149,6 @@
     {
       "path": "./public/app*.js",
       "maxSize": "100 kB"
-    }
-  ],
-  "size-limit": [
-    {
-      "path": [
-        "./public/app*.js",
-        "./public/component*.js"
-      ],
-      "webpack": false,
-      "limit": "500 KB"
     }
   ],
   "config": {
