feat: add dark and light mode support as well new blogpost

--- a/package.json
+++ b/package.json
@@ -12,50 +12,50 @@
     "@mdx-js/mdx": "^1.5.0",
     "@mdx-js/react": "^1.5.0",
     "@mdx-js/tag": "^0.20.3",
-    "acorn": "^7.0.0",
-    "algoliasearch": "^3.34.0",
+    "acorn": "^7.1.0",
+    "algoliasearch": "^3.35.0",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "downshift": "^3.3.1",
-    "eslint-plugin-react-hooks": "^2.0.1",
-    "framer-motion": "^1.6.7",
-    "gatsby": "^2.15.22",
-    "gatsby-cli": "^2.7.50",
-    "gatsby-image": "^2.2.21",
+    "downshift": "^3.3.4",
+    "eslint-plugin-react-hooks": "^2.1.0",
+    "framer-motion": "^1.6.8",
+    "gatsby": "^2.15.28",
+    "gatsby-cli": "^2.7.53",
+    "gatsby-image": "^2.2.23",
     "gatsby-plugin-algolia": "^0.3.4",
-    "gatsby-plugin-feed": "^2.3.13",
-    "gatsby-plugin-google-analytics": "^2.1.17",
-    "gatsby-plugin-manifest": "^2.2.18",
-    "gatsby-plugin-mdx": "^1.0.44",
-    "gatsby-plugin-offline": "^3.0.8",
-    "gatsby-plugin-react-helmet": "^3.1.8",
+    "gatsby-plugin-feed": "^2.3.15",
+    "gatsby-plugin-google-analytics": "^2.1.19",
+    "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-mdx": "^1.0.46",
+    "gatsby-plugin-offline": "^3.0.11",
+    "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.25",
-    "gatsby-plugin-sitemap": "^2.2.14",
-    "gatsby-plugin-styled-components": "^3.1.6",
+    "gatsby-plugin-sharp": "^2.2.27",
+    "gatsby-plugin-sitemap": "^2.2.16",
+    "gatsby-plugin-styled-components": "^3.1.8",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.3.8",
+    "gatsby-plugin-typography": "^2.3.10",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^2.0.0",
-    "gatsby-remark-images": "^3.1.23",
-    "gatsby-remark-prismjs": "^3.3.14",
-    "gatsby-remark-responsive-iframe": "^2.2.18",
-    "gatsby-remark-smartypants": "^2.1.9",
-    "gatsby-source-filesystem": "2.1.26",
-    "gatsby-transformer-json": "^2.2.9",
-    "gatsby-transformer-remark": "^2.6.24",
-    "gatsby-transformer-sharp": "^2.2.17",
+    "gatsby-remark-images": "^3.1.25",
+    "gatsby-remark-prismjs": "^3.3.16",
+    "gatsby-remark-responsive-iframe": "^2.2.20",
+    "gatsby-remark-smartypants": "^2.1.11",
+    "gatsby-source-filesystem": "2.1.28",
+    "gatsby-transformer-json": "^2.2.11",
+    "gatsby-transformer-remark": "^2.6.26",
+    "gatsby-transformer-sharp": "^2.2.19",
     "polished": "^3.4.1",
     "prismjs": "^1.17.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.10.0",
+    "react-dom": "^16.10.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-instantsearch-dom": "^5.7.0",
     "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.19",
-    "serve": "^11.1.0",
+    "serve": "^11.2.0",
     "styled-components": "^4.4.0",
     "styled-theming": "^2.2.0",
     "typeface-raleway": "^0.0.75",
@@ -71,43 +71,45 @@
     "@octokit/rest": "^16.30.1",
     "@storybook/addon-a11y": "^5.2.1",
     "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-backgrounds": "^5.2.1",
+    "@storybook/addon-knobs": "^5.2.1",
     "@storybook/addon-links": "^5.2.1",
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
     "@storybook/theming": "^5.2.1",
     "@testing-library/cypress": "^5.0.1",
     "@testing-library/jest-dom": "^4.1.0",
-    "@testing-library/react": "^9.1.4",
+    "@testing-library/react": "^9.2.0",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-gatsby": "^0.2.14",
+    "babel-preset-gatsby": "^0.2.17",
     "bundlesize": "^0.18.0",
     "core-js": "3.2.1",
     "cypress": "^3.4.1",
     "cz-conventional-changelog": "3.0.2",
-    "eslint": "^6.4.0",
+    "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "^3.0.0",
-    "eslint-plugin-cypress": "^2.6.1",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.15.1",
     "gatsby-plugin-eslint": "^2.0.5",
-    "husky": "^3.0.5",
+    "husky": "^3.0.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "jest-styled-components": "^6.3.3",
     "jsdom": "^15.1.1",
     "lighthouse-ci": "1.10.0",
-    "lint-staged": "^9.3.0",
-    "now": "^16.2.0",
+    "lint-staged": "^9.4.1",
+    "now": "^16.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
-    "react-test-renderer": "^16.9.0",
-    "start-server-and-test": "^1.10.2",
+    "react-test-renderer": "^16.10.1",
+    "start-server-and-test": "^1.10.3",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
