--- a/package.json
+++ b/package.json
@@ -134,12 +134,12 @@
     "cy:run": "cypress run",
     "cy:dev": "cypress open",
     "deploy": "now ./public --token=$NOW_TOKEN --target staging --local-config=../now.json",
-    "deploy:prod": "now ./public --token=$NOW_TOKEN --target production --local-config=../now.json",
+    "deploy:prod": "now ./public --token=$NOW_TOKEN --prod --local-config=../now.json",
     "build-deploy-and-alias-prod": "npm-run-all -s build:prod deploy:prod",
     "lighthouse": "lighthouse-ci https://jcofman.now.sh --score=90 --performance=85 --pwa=90 --accessibility=90 --best-practice=90 --seo=90",
     "storybook": "NODE_ENV=production start-storybook -p 6006",
     "build:storybook": "NODE_ENV=production build-storybook",
-    "deploy:storybook": "now ./storybook-static --token=$NOW_TOKEN --target production --local-config=../now.storybook.json",
+    "deploy:storybook": "now ./storybook-static --token=$NOW_TOKEN --prod --local-config=../now.storybook.json",
     "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook",
     "clean": "gatsby clean"
   },
