--- a/package.json
+++ b/package.json
@@ -9,52 +9,53 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.0",
-    "@mdx-js/react": "^1.5.0",
+    "@mdx-js/mdx": "^1.5.1",
+    "@mdx-js/react": "^1.5.1",
     "@mdx-js/tag": "^0.20.3",
     "acorn": "^7.1.0",
-    "algoliasearch": "^3.35.0",
+    "algoliasearch": "^3.35.1",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "downshift": "^3.3.4",
-    "eslint-plugin-react-hooks": "^2.1.0",
-    "framer-motion": "^1.6.8",
-    "gatsby": "^2.15.28",
-    "gatsby-cli": "^2.7.53",
-    "gatsby-image": "^2.2.23",
+    "downshift": "^3.3.5",
+    "eslint-plugin-react-hooks": "^2.1.2",
+    "framer-motion": "^1.6.14",
+    "gatsby": "^2.16.5",
+    "gatsby-cli": "^2.8.3",
+    "gatsby-image": "^2.2.29",
     "gatsby-plugin-algolia": "^0.3.4",
-    "gatsby-plugin-feed": "^2.3.15",
-    "gatsby-plugin-google-analytics": "^2.1.19",
-    "gatsby-plugin-manifest": "^2.2.20",
-    "gatsby-plugin-mdx": "^1.0.46",
-    "gatsby-plugin-offline": "^3.0.11",
-    "gatsby-plugin-react-helmet": "^3.1.10",
+    "gatsby-plugin-feed": "^2.3.19",
+    "gatsby-plugin-google-analytics": "^2.1.23",
+    "gatsby-plugin-manifest": "^2.2.23",
+    "gatsby-plugin-mdx": "^1.0.52",
+    "gatsby-plugin-offline": "^3.0.16",
+    "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.27",
-    "gatsby-plugin-sitemap": "^2.2.16",
-    "gatsby-plugin-styled-components": "^3.1.8",
+    "gatsby-plugin-sharp": "^2.2.32",
+    "gatsby-plugin-sitemap": "^2.2.19",
+    "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.3.10",
+    "gatsby-plugin-typography": "^2.3.14",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^2.0.0",
-    "gatsby-remark-images": "^3.1.25",
-    "gatsby-remark-prismjs": "^3.3.16",
-    "gatsby-remark-responsive-iframe": "^2.2.20",
-    "gatsby-remark-smartypants": "^2.1.11",
-    "gatsby-source-filesystem": "2.1.28",
-    "gatsby-transformer-json": "^2.2.11",
-    "gatsby-transformer-remark": "^2.6.26",
-    "gatsby-transformer-sharp": "^2.2.19",
+    "gatsby-remark-images": "^3.1.28",
+    "gatsby-remark-prismjs": "^3.3.20",
+    "gatsby-remark-responsive-iframe": "^2.2.25",
+    "gatsby-remark-smartypants": "^2.1.14",
+    "gatsby-source-filesystem": "2.1.33",
+    "gatsby-transformer-json": "^2.2.15",
+    "gatsby-transformer-remark": "^2.6.30",
+    "gatsby-transformer-sharp": "^2.2.23",
     "polished": "^3.4.1",
     "prismjs": "^1.17.1",
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-instantsearch-dom": "^5.7.0",
     "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.19",
+    "react-useportal": "^1.0.4",
     "serve": "^11.2.0",
     "styled-components": "^4.4.0",
     "styled-theming": "^2.2.0",
@@ -62,31 +63,31 @@
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
+    "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
-    "@octokit/rest": "^16.30.1",
-    "@storybook/addon-a11y": "^5.2.1",
-    "@storybook/addon-actions": "^5.2.1",
-    "@storybook/addon-backgrounds": "^5.2.1",
-    "@storybook/addon-knobs": "^5.2.1",
-    "@storybook/addon-links": "^5.2.1",
-    "@storybook/addons": "^5.2.1",
-    "@storybook/react": "^5.2.1",
-    "@storybook/theming": "^5.2.1",
-    "@testing-library/cypress": "^5.0.1",
-    "@testing-library/jest-dom": "^4.1.0",
-    "@testing-library/react": "^9.2.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@octokit/rest": "^16.33.1",
+    "@storybook/addon-a11y": "^5.2.4",
+    "@storybook/addon-actions": "^5.2.4",
+    "@storybook/addon-backgrounds": "^5.2.4",
+    "@storybook/addon-knobs": "^5.2.4",
+    "@storybook/addon-links": "^5.2.4",
+    "@storybook/addons": "^5.2.4",
+    "@storybook/react": "^5.2.4",
+    "@storybook/theming": "^5.2.4",
+    "@testing-library/cypress": "^5.0.2",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/react": "^9.3.0",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-gatsby": "^0.2.17",
+    "babel-preset-gatsby": "^0.2.20",
     "bundlesize": "^0.18.0",
-    "core-js": "3.2.1",
+    "core-js": "3.3.2",
     "cypress": "^3.4.1",
     "cz-conventional-changelog": "3.0.2",
     "eslint": "^6.5.1",
@@ -96,20 +97,20 @@
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.15.1",
+    "eslint-plugin-react": "^7.16.0",
     "gatsby-plugin-eslint": "^2.0.5",
-    "husky": "^3.0.8",
+    "husky": "^3.0.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "jest-styled-components": "^6.3.3",
-    "jsdom": "^15.1.1",
+    "jsdom": "^15.2.0",
     "lighthouse-ci": "1.10.0",
-    "lint-staged": "^9.4.1",
+    "lint-staged": "^9.4.2",
     "now": "^16.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.10.2",
-    "start-server-and-test": "^1.10.4",
+    "start-server-and-test": "^1.10.6",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
