--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "framer-motion": "^1.6.15",
     "gatsby": "^2.17.15",
+    "gatsby-background-image": "^0.9.6",
     "gatsby-cli": "^2.8.11",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-algolia": "^0.4.0",
