--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "gatsby-plugin-typography": "^2.3.18",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^2.0.1",
-    "gatsby-remark-images": "^3.1.34",
+    "gatsby-remark-images": "^3.1.35",
     "gatsby-remark-prismjs": "^3.3.25",
     "gatsby-remark-responsive-iframe": "^2.2.28",
     "gatsby-remark-smartypants": "^2.1.17",
@@ -105,8 +105,8 @@
     "jest-styled-components": "^6.3.3",
     "jsdom": "^15.2.1",
     "lighthouse-ci": "1.10.0",
-    "lint-staged": "^9.4.2",
-    "now": "^16.5.2",
+    "lint-staged": "^9.5.0",
+    "now": "^16.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.12.0",
@@ -123,7 +123,10 @@
     "build:prod": "PUBLISH_ON_NOW=production gatsby build",
     "develop": "npm-run-all -p dev storybook",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "format": "npm run prettier --write 'src/**/*.js'",
+    "check-format": "npm run prettier  -- --list-different",
+    "prettier": "prettier --ignore-path .gitignore --write 'src/**/*.js'",
     "start": "npm-run-all -p dev storybook",
     "start:ci": "serve --no-clipboard --listen 8899",
     "test": "jest --env=jsdom",
@@ -142,7 +145,8 @@
     "build:storybook": "NODE_ENV=production build-storybook",
     "deploy:storybook": "now ./storybook-static --token=$NOW_TOKEN --prod --local-config=../now.storybook.json",
     "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "validate": "npm-run-all --parallel lint test test:size:bundlesize"
   },
   "bundlesize": [
     {
