--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           node-version: 12
       - run: yarn
+      - run: yarn build
       - run: yarn test
       - run: yarn test:size
 
