chore: update to yarn 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,7 @@
   "files.associations": {
     "*.md": "mdx"
   },
-  "peacock.color": "#4A90E2"
+  "peacock.color": "#4A90E2",
+  "eslint.nodePath": ".vscode/pnpify",
+  "prettier.prettierPath": ".vscode/pnpify/prettier/index.js"
 }
