--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.7",
     "@mdx-js/react": "^1.5.7",
-    "acorn": "^7.1.0",
+    "@svgr/webpack": "^5.2.0",
+    "@yarnpkg/pnpify": "^2.0.0-rc.18",
+    "acorn": "^7.1.1",
     "algoliasearch": "^4.0.3",
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
     "downshift": "^5.0.3",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "framer-motion": "^1.8.4",
-    "gatsby": "^2.19.22",
+    "framer-motion": "^1.9.0",
+    "gatsby": "^2.19.27",
     "gatsby-background-image": "^0.10.2",
-    "gatsby-cli": "^2.9.0",
-    "gatsby-image": "^2.2.41",
+    "gatsby-cli": "^2.10.0",
+    "gatsby-image": "^2.2.42",
     "gatsby-plugin-algolia": "^0.5.0",
     "gatsby-plugin-feed": "^2.3.27",
     "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-manifest": "^2.2.42",
-    "gatsby-plugin-mdx": "^1.0.74",
+    "gatsby-plugin-mdx": "^1.0.75",
     "gatsby-plugin-offline": "^3.0.35",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-react-svg": "^3.0.0",
@@ -39,20 +41,24 @@
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^2.0.1",
     "gatsby-remark-images": "^3.1.44",
-    "gatsby-remark-prismjs": "^3.3.31",
+    "gatsby-remark-prismjs": "^3.3.32",
     "gatsby-remark-responsive-iframe": "^2.2.32",
     "gatsby-remark-smartypants": "^2.1.21",
     "gatsby-source-filesystem": "2.1.48",
     "gatsby-transformer-json": "^2.2.26",
     "gatsby-transformer-remark": "^2.6.53",
-    "gatsby-transformer-sharp": "^2.3.15",
+    "gatsby-transformer-sharp": "^2.3.16",
+    "minimatch": "^3.0.4",
+    "pify": "^5.0.0",
     "polished": "^3.4.4",
     "prismjs": "^1.19.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-instantsearch-dom": "^6.3.0",
+    "react-is": "^16.13.0",
     "react-simple-maps": "^0.12.1",
     "react-typography": "^0.16.19",
     "react-useportal": "^1.0.13",
@@ -63,11 +69,11 @@
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
     "@octokit/rest": "^17.0.0",
     "@storybook/addon-a11y": "^5.3.14",
@@ -88,8 +94,9 @@
     "babel-preset-gatsby": "^0.2.29",
     "bundlesize": "^0.18.0",
     "core-js": "3.6.4",
-    "cypress": "^4.0.2",
+    "cypress": "^4.1.0",
     "cz-conventional-changelog": "3.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-react-app": "^5.2.0",
