--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "workbench.colorCustomizations": {
     "activityBar.background": "#76abe9",
+    "activityBar.activeBackground": "#76abe9",
     "activityBar.activeBorder": "#c01f69",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
