--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,4 @@
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.js
-    spec: "@yarnpkg/plugin-interactive-tools"
-
+    spec: '@yarnpkg/plugin-interactive-tools'
 yarnPath: /Users/jcofman/Documents/git/jc-gatsby-site/.yarn/releases/yarn-berry.js
