--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
     "@mdx-js/mdx": "^1.5.7",
     "@mdx-js/react": "^1.5.7",
     "@svgr/webpack": "^5.2.0",
-    "@yarnpkg/pnpify": "^2.0.0-rc.18",
+    "@yarnpkg/pnpify": "^2.0.0-rc.19",
     "acorn": "^7.1.1",
-    "algoliasearch": "^4.0.3",
+    "algoliasearch": "^4.1.0",
     "axios": "^0.19.2",
+    "babel-plugin-remove-graphql-queries": "^2.7.25",
     "babel-plugin-styled-components": "^1.10.7",
-    "downshift": "^5.0.3",
+    "downshift": "^5.0.5",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "framer-motion": "^1.9.0",
-    "gatsby": "^2.19.27",
+    "framer-motion": "^1.9.1",
+    "gatsby": "^2.19.43",
     "gatsby-background-image": "^0.10.2",
-    "gatsby-cli": "^2.10.0",
-    "gatsby-image": "^2.2.42",
+    "gatsby-cli": "^2.10.10",
+    "gatsby-image": "^2.2.43",
     "gatsby-plugin-algolia": "^0.5.0",
-    "gatsby-plugin-feed": "^2.3.27",
-    "gatsby-plugin-google-analytics": "^2.1.36",
-    "gatsby-plugin-manifest": "^2.2.42",
-    "gatsby-plugin-mdx": "^1.0.75",
-    "gatsby-plugin-offline": "^3.0.35",
-    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-feed": "^2.3.28",
+    "gatsby-plugin-google-analytics": "^2.1.37",
+    "gatsby-plugin-manifest": "^2.2.47",
+    "gatsby-plugin-mdx": "^1.0.82",
+    "gatsby-plugin-offline": "^3.0.40",
+    "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-plugin-sitemap": "^2.2.27",
-    "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-plugin-sharp": "^2.4.12",
+    "gatsby-plugin-sitemap": "^2.2.29",
+    "gatsby-plugin-styled-components": "^3.1.20",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.3.22",
+    "gatsby-plugin-typography": "^2.3.24",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-remark-embed-video": "^2.0.1",
-    "gatsby-remark-images": "^3.1.44",
-    "gatsby-remark-prismjs": "^3.3.32",
-    "gatsby-remark-responsive-iframe": "^2.2.32",
-    "gatsby-remark-smartypants": "^2.1.21",
-    "gatsby-source-filesystem": "2.1.48",
-    "gatsby-transformer-json": "^2.2.26",
-    "gatsby-transformer-remark": "^2.6.53",
-    "gatsby-transformer-sharp": "^2.3.16",
+    "gatsby-remark-images": "^3.1.49",
+    "gatsby-remark-prismjs": "^3.3.35",
+    "gatsby-remark-responsive-iframe": "^2.2.33",
+    "gatsby-remark-smartypants": "^2.1.22",
+    "gatsby-source-filesystem": "2.1.55",
+    "gatsby-transformer-json": "^2.2.27",
+    "gatsby-transformer-remark": "^2.6.58",
+    "gatsby-transformer-sharp": "^2.3.18",
     "minimatch": "^3.0.4",
     "pify": "^5.0.0",
     "polished": "^3.4.4",
@@ -69,55 +70,56 @@
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
-    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
-    "@octokit/rest": "^17.0.0",
-    "@storybook/addon-a11y": "^5.3.14",
-    "@storybook/addon-actions": "^5.3.14",
-    "@storybook/addon-backgrounds": "^5.3.14",
-    "@storybook/addon-knobs": "^5.3.14",
-    "@storybook/addon-links": "^5.3.14",
-    "@storybook/addons": "^5.3.14",
-    "@storybook/react": "^5.3.14",
-    "@storybook/theming": "^5.3.14",
-    "@testing-library/cypress": "^5.3.0",
+    "@babel/runtime": "^7.8.7",
+    "@octokit/rest": "^17.1.0",
+    "@storybook/addon-a11y": "v6.0.0-alpha.27",
+    "@storybook/addon-actions": "v6.0.0-alpha.27",
+    "@storybook/addon-backgrounds": "v6.0.0-alpha.27",
+    "@storybook/addon-knobs": "v6.0.0-alpha.27",
+    "@storybook/addon-links": "v6.0.0-alpha.27",
+    "@storybook/addons": "v6.0.0-alpha.27",
+    "@storybook/react": "v6.0.0-alpha.27",
+    "@storybook/theming": "v6.0.0-alpha.27",
+    "@testing-library/cypress": "^6.0.0",
     "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^10.0.1",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-gatsby": "^0.2.29",
+    "babel-preset-gatsby": "^0.2.35",
     "bundlesize": "^0.18.0",
     "core-js": "3.6.4",
     "cypress": "^4.1.0",
     "cz-conventional-changelog": "3.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react": "^7.19.0",
     "gatsby-plugin-eslint": "^2.0.8",
     "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "jest-styled-components": "^7.0.0",
-    "jsdom": "^16.2.0",
+    "jsdom": "^16.2.1",
     "lighthouse-ci": "1.10.0",
     "lint-staged": "^10.0.8",
     "now": "^17.0.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "react-test-renderer": "^16.13.0",
-    "start-server-and-test": "^1.10.8",
+    "start-server-and-test": "^1.10.10",
     "webpagetest": "^0.3.9"
   },
   "keywords": [
