--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.8",
     "@mdx-js/react": "^1.5.8",
+    "@reach/router": "^1.3.3",
     "@svgr/webpack": "^5.3.0",
     "@yarnpkg/pnpify": "^2.0.0-rc.20",
     "acorn": "^7.1.1",
@@ -119,6 +120,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.2",
     "react-test-renderer": "^16.13.1",
+    "slash": "^3.0.0",
     "start-server-and-test": "^1.10.11",
     "webpagetest": "^0.3.9"
   },
