--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,4 @@
 {
-  "linters": {
-    "*.js": ["eslint"],
-    "*.+(js|jsx|json|yml|css|less|scss|ts|tsx|md|graphql|mdx": ["prettier --ignore-path .gitignore --write", "git add"]
-  }
+  "*.js": ["eslint"],
+  "*.+(js|jsx|json|yml|css|less|scss|ts|tsx|md|graphql|mdx)": ["prettier --ignore-path .gitignore --write", "git add"]
 }
