--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Test build and deploy site
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   test:
@@ -23,33 +26,17 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
       - name: Branch name
         run: echo running on branch ${GITHUB_REF##*/}
       - name: Build prod
         run: npm build:prod
       - name: Deploy prod
-        run: npm deploy:prod
-        env:
-          NOW_TOKEN: ${{secrets.NOW_TOKEN}}
-
-  build-and-deploy-feature:
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.ref != 'refs/heads/master'
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          node-version: 12
-      - name: Branch name
-        run: echo running on branch ${GITHUB_REF##*/}
-      - name: Build feature
-        run: npm build
-      - name: Deploy feature
-        run: npm deploy
-        env:
-          NOW_TOKEN: ${{ secrets.NOW_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          BRANCH: master # The branch the action should deploy to.
+          FOLDER: public # The folder the action should deploy.
 
   webPageTestActions:
     name: WebPageTestActions
@@ -58,6 +45,6 @@ jobs:
     steps:
       - uses: JCofman/webPagetestAction@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TEST_URL: https://jcofman.com
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          TEST_URL: https://nicht.rocks
           WEBPAGETEST_API_KEY: ${{ secrets.WEBPAGETEST_API_KEY }}
