--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "jacob-website",
-  "description": "Jacob's personal website",
+  "name": "nicht.rocks",
+  "description": "nicht's personal website",
   "private": true,
   "version": "1.0.0",
-  "author": "Jacob Cofman <cofman.jacob@gmail.com>",
-  "homepage": "https://jcofman.de",
+  "author": "Rodolfo Olivieri <rodolfo.olivieri@nicht.rocks>",
+  "homepage": "https://nicht.rocks",
   "bugs": {
-    "url": "https://github.com/JCofman/jc-website/issues"
+    "url": "https://github.com/nicht/nicht.rocks/issues"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.0",
@@ -25,7 +25,6 @@
     "gatsby-background-image": "^1.1.1",
     "gatsby-cli": "^2.12.0",
     "gatsby-image": "^2.4.0",
-    "gatsby-plugin-algolia": "^0.9.0",
     "gatsby-plugin-feed": "^2.5.0",
     "gatsby-plugin-google-analytics": "^2.3.0",
     "gatsby-plugin-manifest": "^2.4.0",
