--- a/.eslintrc
+++ b/.eslintrc
@@ -18,8 +18,7 @@
     "react/prop-types": 0,
     "no-unused-vars": "warn",
     "no-console": "warn",
-    "react-hooks/rules-of-hooks": "error",
-    "quotes": ["error", "backtick"]
+    "react-hooks/rules-of-hooks": "error"
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"]
 }
