--- a/package.json
+++ b/package.json
@@ -9,121 +9,134 @@
     "url": "https://github.com/JCofman/jc-website/issues"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.1",
-    "@mdx-js/react": "^1.6.1",
-    "@reach/router": "^1.3.3",
+    "@mdx-js/mdx": "^1.6.19",
+    "@mdx-js/react": "^1.6.19",
+    "@reach/router": "^1.3.4",
+    "@react-spring/core": "^9.0.0-rc.3",
+    "@react-spring/three": "^9.0.0-rc.3",
+    "@react-spring/web": "^9.0.0-rc.3",
     "@svgr/webpack": "^5.4.0",
-    "acorn": "^7.2.0",
-    "algoliasearch": "^4.2.0",
-    "axios": "^0.19.2",
-    "babel-plugin-remove-graphql-queries": "^2.9.1",
-    "babel-plugin-styled-components": "^1.10.7",
-    "downshift": "^5.4.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
-    "framer-motion": "^1.11.0",
-    "gatsby": "^2.21.33",
-    "gatsby-background-image": "^1.1.1",
-    "gatsby-cli": "^2.12.21",
-    "gatsby-image": "^2.4.3",
-    "gatsby-plugin-algolia": "^0.11.0",
-    "gatsby-plugin-feed": "^2.5.1",
-    "gatsby-plugin-google-analytics": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.4.3",
-    "gatsby-plugin-mdx": "^1.2.7",
-    "gatsby-plugin-offline": "^3.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.1",
+    "acorn": "^8.0.4",
+    "algoliasearch": "^4.5.1",
+    "axios": "^0.21.0",
+    "babel-plugin-remove-graphql-queries": "^2.9.20",
+    "babel-plugin-styled-components": "^1.11.1",
+    "downshift": "^6.0.6",
+    "drei": "^1.5.7",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "framer-motion": "^2.9.4",
+    "gatsby": "^2.24.91",
+    "gatsby-background-image": "^1.1.2",
+    "gatsby-cli": "^2.12.113",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-algolia": "^0.14.1",
+    "gatsby-plugin-feed": "^2.5.20",
+    "gatsby-plugin-google-analytics": "^2.3.19",
+    "gatsby-plugin-manifest": "^2.4.37",
+    "gatsby-plugin-mdx": "^1.2.52",
+    "gatsby-plugin-offline": "^3.2.38",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.6.3",
-    "gatsby-plugin-sitemap": "^2.4.2",
-    "gatsby-plugin-styled-components": "^3.3.1",
+    "gatsby-plugin-robots-txt": "^1.5.3",
+    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-sitemap": "^2.4.17",
+    "gatsby-plugin-styled-components": "^3.3.14",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.5.1",
+    "gatsby-plugin-typography": "^2.5.13",
     "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
-    "gatsby-remark-autolink-headers": "^2.3.2",
+    "gatsby-remark-autolink-headers": "^2.3.16",
     "gatsby-remark-embed-video": "^3.0.10",
-    "gatsby-remark-images": "^3.3.3",
-    "gatsby-remark-prismjs": "^3.5.1",
-    "gatsby-remark-responsive-iframe": "^2.4.2",
-    "gatsby-remark-smartypants": "^2.3.1",
-    "gatsby-source-filesystem": "^2.3.3",
-    "gatsby-transformer-json": "^2.4.2",
-    "gatsby-transformer-remark": "^2.8.8",
-    "gatsby-transformer-sharp": "^2.5.2",
+    "gatsby-remark-images": "^3.3.40",
+    "gatsby-remark-prismjs": "^3.5.16",
+    "gatsby-remark-responsive-iframe": "^2.4.17",
+    "gatsby-remark-smartypants": "^2.3.13",
+    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-transformer-json": "^2.4.15",
+    "gatsby-transformer-remark": "^2.8.47",
+    "gatsby-transformer-sharp": "^2.5.20",
+    "i": "^0.3.6",
+    "install": "^0.13.0",
+    "lerp": "^1.0.3",
     "minimatch": "^3.0.4",
+    "npm": "^6.14.8",
     "pify": "^5.0.0",
-    "polished": "^3.6.3",
-    "prismjs": "^1.20.0",
+    "polished": "^4.0.3",
+    "postprocessing": "^6.17.4",
+    "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-icons": "^3.10.0",
-    "react-instantsearch-dom": "^6.4.0",
-    "react-is": "^16.13.1",
-    "react-simple-maps": "^2.0.0",
+    "react": "^17.0.1",
+    "react-adaptive-hooks": "0.0.8",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^3.11.0",
+    "react-instantsearch-dom": "^6.8.2",
+    "react-is": "^17.0.1",
+    "react-simple-maps": "^2.2.0",
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^5.1.4",
     "react-typography": "^0.16.19",
     "react-useportal": "^1.0.13",
-    "serve": "^11.3.0",
-    "styled-components": "^5.1.0",
+    "serve": "^11.3.2",
+    "styled-components": "^5.2.0",
     "styled-theming": "^2.2.0",
-    "typeface-raleway": "^0.0.75",
+    "three": "^0.122.0",
+    "typeface-raleway": "^1.1.13",
     "typography": "^0.16.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/runtime": "^7.9.6",
-    "@octokit/rest": "^17.9.0",
-    "@storybook/addon-a11y": "^5.3.18",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-backgrounds": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/react": "^5.3.18",
-    "@storybook/theming": "^5.3.18",
-    "@testing-library/cypress": "^6.0.0",
-    "@testing-library/jest-dom": "^5.7.0",
-    "@testing-library/react": "^10.0.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@babel/runtime": "^7.12.1",
+    "@octokit/rest": "^18.0.6",
+    "@storybook/addon-a11y": "^6.0.27",
+    "@storybook/addon-actions": "^6.0.27",
+    "@storybook/addon-backgrounds": "^6.0.27",
+    "@storybook/addon-knobs": "^6.0.27",
+    "@storybook/addon-links": "^6.0.27",
+    "@storybook/addons": "^6.0.27",
+    "@storybook/react": "^6.0.27",
+    "@storybook/theming": "^6.0.27",
+    "@testing-library/cypress": "^7.0.1",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
+    "babel-jest": "^26.6.1",
     "babel-loader": "^8.1.0",
-    "babel-preset-gatsby": "^0.4.2",
+    "babel-preset-gatsby": "^0.5.14",
     "bundlesize": "^0.18.0",
     "core-js": "3.6.5",
-    "cypress": "^4.5.0",
-    "cz-conventional-changelog": "3.2.0",
+    "cypress": "^5.5.0",
+    "cz-conventional-changelog": "3.3.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "gatsby-plugin-eslint": "^2.0.8",
-    "husky": "^4.2.5",
+    "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.1",
-    "jest-styled-components": "^7.0.2",
-    "jsdom": "^16.2.2",
-    "lighthouse-ci": "1.10.0",
-    "lint-staged": "^10.2.2",
-    "now": "^19.0.1",
+    "jest": "^26.6.1",
+    "jest-styled-components": "^7.0.3",
+    "jsdom": "^16.4.0",
+    "lighthouse-ci": "1.11.0",
+    "lint-staged": "^10.5.0",
+    "now": "^20.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "react-test-renderer": "^16.13.1",
-    "regenerator-runtime": "^0.13.5",
+    "prettier": "^2.1.2",
+    "react-test-renderer": "^17.0.1",
+    "regenerator-runtime": "^0.13.7",
     "slash": "^3.0.0",
-    "start-server-and-test": "^1.11.0",
-    "webpagetest": "^0.3.9"
+    "start-server-and-test": "^1.11.5",
+    "webpagetest": "^0.4.0"
   },
   "keywords": [
     "gatsby"
@@ -159,6 +172,7 @@
     "deploy:storybook": "now ./storybook-static --token=$NOW_TOKEN --prod --local-config=../now.storybook.json",
     "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook",
     "clean": "gatsby clean",
+    "update": "ncu -u",
     "validate": "npm-run-all --parallel lint test test:size:bundlesize"
   },
   "bundlesize": [
