fix: try migrate

--- a/package.json
+++ b/package.json
@@ -146,7 +146,8 @@
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0"
+    "stylelint-processor-styled-components": "^1.10.0",
+    "typescript": "^4.4.4"
   },
   "keywords": [
     "gatsby"
