--- a/package.json
+++ b/package.json
@@ -14,52 +14,59 @@
     "@mdx-js/preact": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
-    "@react-three/drei": "^7.14.1",
-    "@sentry/gatsby": "^6.13.3",
-    "@svgr/webpack": "^5.5.0",
-    "algoliasearch": "^4.10.5",
-    "babel-plugin-remove-graphql-queries": "^3.14.0",
-    "babel-plugin-styled-components": "^1.13.2",
+    "@react-three/drei": "^8.3.0",
+    "@sentry/gatsby": "^6.16.1",
+    "@storybook/builder-webpack5": "^6.4.9",
+    "@storybook/manager-webpack5": "^6.4.9",
+    "@svgr/webpack": "^6.1.2",
+    "@types/react-helmet": "^6.1.4",
+    "@types/react-instantsearch-dom": "^6.12.1",
+    "@types/react-simple-maps": "^1.0.7",
+    "@types/styled-components": "^5.1.18",
+    "ahooks": "^3.0.8",
+    "algoliasearch": "^4.11.0",
+    "babel-plugin-remove-graphql-queries": "^4.4.0",
+    "babel-plugin-styled-components": "^2.0.2",
     "downshift": "^6.1.7",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "framer-motion": "^4.1.17",
-    "gatsby": "3.14.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "framer-motion": "^5.5.5",
+    "gatsby": "4.4.0",
     "gatsby-background-image": "^1.5.3",
-    "gatsby-cli": "^3.14.1",
-    "gatsby-plugin-algolia": "^0.22.2",
-    "gatsby-plugin-feed": "^3.14.0",
-    "gatsby-plugin-image": "^1.14.1",
-    "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-mdx": "^2.14.0",
-    "gatsby-plugin-offline": "^4.14.0",
+    "gatsby-build-newrelic": "^1.1.16",
+    "gatsby-cli": "^4.4.0",
+    "gatsby-plugin-algolia": "^0.25.0",
+    "gatsby-plugin-feed": "^4.4.0",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-mdx": "^3.4.0",
+    "gatsby-plugin-offline": "^5.4.0",
     "gatsby-plugin-optimize-svgs": "^1.0.5",
-    "gatsby-plugin-preact": "^5.14.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
-    "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-robots-txt": "^1.6.10",
-    "gatsby-plugin-sharp": "^3.14.1",
-    "gatsby-plugin-sitemap": "^4.10.0",
-    "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby-plugin-preact": "^6.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-robots-txt": "^1.6.14",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby-plugin-styled-components": "^5.4.0",
     "gatsby-plugin-svgr": "^2.1.0",
-    "gatsby-plugin-typography": "^3.14.0",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.25",
-    "gatsby-remark-autolink-headers": "^4.11.0",
+    "gatsby-plugin-typography": "^4.4.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
+    "gatsby-remark-autolink-headers": "^5.4.0",
     "gatsby-remark-embed-video": "^3.1.1",
-    "gatsby-remark-images": "^5.11.0",
-    "gatsby-remark-prismjs": "^5.11.0",
-    "gatsby-remark-responsive-iframe": "^4.11.0",
-    "gatsby-remark-smartypants": "^4.11.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-source-notion-api": "^0.10.0",
-    "gatsby-transformer-json": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
-    "gatsby-transformer-sharp": "^3.14.0",
+    "gatsby-remark-images": "^6.4.0",
+    "gatsby-remark-prismjs": "^6.4.0",
+    "gatsby-remark-responsive-iframe": "^5.4.0",
+    "gatsby-remark-smartypants": "^5.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-source-notion-api": "^0.11.0",
+    "gatsby-transformer-json": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
+    "gatsby-transformer-sharp": "^4.4.0",
     "gbimage-bridge": "^0.1.4",
-    "graphql": "^15.6.1",
     "lerp": "^1.0.3",
     "polished": "^4.1.3",
-    "postprocessing": "^6.23.1",
-    "preact": "^10.5.15",
+    "postprocessing": "^6.23.3",
+    "preact": "^10.6.4",
     "preact-render-to-string": "^5.1.19",
     "prismjs": "^1.25.0",
     "prop-types": "^15.7.2",
@@ -68,95 +75,109 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
-    "react-instantsearch-dom": "^6.12.1",
+    "react-instantsearch-dom": "^6.18.0",
     "react-is": "^17.0.2",
+    "react-query": "^3.34.5",
     "react-simple-maps": "^2.3.0",
-    "react-spring": "^9.3.0",
+    "react-spring": "^9.3.2",
     "react-three-fiber": "^5.3.22",
     "react-tooltip": "^4.2.21",
     "react-typography": "^0.16.20",
-    "react-useportal": "^1.0.14",
-    "styled-components": "^5.3.1",
-    "three": "^0.133.1",
+    "react-useportal": "^1.0.16",
+    "styled-components": "^5.3.3",
+    "three": "^0.135.0",
     "typography": "^0.16.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/eslint-parser": "^7.15.8",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/core": "^7.16.5",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/runtime": "^7.15.4",
-    "@graphql-codegen/cli": "^2.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@babel/runtime": "^7.16.5",
+    "@graphql-codegen/cli": "2.3.0",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.4.1",
+    "@graphql-codegen/typescript-operations": "2.2.1",
+    "@graphql-codegen/typescript-react-apollo": "3.2.2",
     "@octokit/rest": "^18.12.0",
-    "@storybook/addon-a11y": "^6.3.11",
-    "@storybook/addon-actions": "^6.3.11",
-    "@storybook/addon-backgrounds": "^6.3.11",
-    "@storybook/addon-essentials": "^6.3.11",
+    "@storybook/addon-a11y": "^6.4.9",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-backgrounds": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-knobs": "^6.3.1",
-    "@storybook/addon-links": "^6.3.11",
-    "@storybook/addons": "^6.3.11",
-    "@storybook/react": "^6.3.11",
-    "@storybook/theming": "^6.3.11",
-    "@testing-library/cypress": "^8.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/addons": "^6.4.9",
+    "@storybook/react": "^6.4.9",
+    "@storybook/theming": "^6.4.9",
+    "@testing-library/cypress": "^8.0.2",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.0",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "acorn-dynamic-import": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.2.5",
-    "babel-loader": "^8.2.2",
-    "babel-preset-gatsby": "^1.14.0",
+    "babel-jest": "^27.4.5",
+    "babel-loader": "^8.2.3",
+    "babel-preset-gatsby": "^2.4.0",
     "bundlesize": "^0.18.1",
-    "core-js": "3.18.3",
-    "cypress": "^8.6.0",
+    "core-js": "3.20.0",
+    "cypress": "^9.1.1",
     "cz-conventional-changelog": "3.3.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-unicorn": "^36.0.0",
-    "eslint-webpack-plugin": "^3.0.1",
-    "gatsby-plugin-eslint": "^4.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-unicorn": "^39.0.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "gatsby-plugin-eslint": "^4.0.2",
+    "gatsby-plugin-ts-config": "^2.1.3",
     "gatsby-remark-static-images": "^1.2.1",
-    "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.2",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "inspx": "^0.0.1-alpha.6",
-    "jest": "^27.2.5",
-    "jest-styled-components": "^7.0.5",
-    "jsdom": "^18.0.0",
-    "lighthouse-ci": "^1.13.0",
-    "lint-staged": "^11.2.3",
+    "jest": "^27.4.5",
+    "jest-styled-components": "^7.0.8",
+    "jsdom": "^19.0.0",
+    "lighthouse-ci": "^1.13.1",
+    "lint-staged": "^12.1.2",
     "now": "^21.0.1",
     "npm-run-all": "^4.1.5",
     "optimize-plugin": "^1.0.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
     "regenerator-runtime": "^0.13.9",
-    "serve": "^12.0.1",
+    "serve": "^13.0.2",
     "slash": "^4.0.0",
     "start-server-and-test": "^1.14.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
+    "stylelint": "^14.1.0",
+    "stylelint-config-recommended": "^6.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
-  "main": "n/a",
   "scripts": {
-    "build": "PUBLISH_ON_NOW=branch-deploy gatsby build",
-    "build:prod": "NODE_ENV=production PUBLISH_ON_NOW=production gatsby build",
+    "build": "PUBLISH_ON_NOW=branch-deploy gatsby build --open-tracing-config-file ./node_modules/gatsby-build-newrelic/zipkin-local.js --graphql-tracing",
+    "build:prod": "NODE_ENV=production PUBLISH_ON_NOW=production gatsby build --open-tracing-config-file ./node_modules/gatsby-build-newrelic/zipkin-local.js --graphql-tracing",
     "develop": "GATSBY_EXPERIMENTAL_REMOTE_IMAGES=1 npm-run-all -p dev storybook",
     "serve": "gatsby serve",
     "dev": "PUBLISH_ON_NOW=branch-deploy gatsby develop",
@@ -185,7 +206,8 @@
     "build-deploy-and-alias-storybook": "npm-run-all -s build:storybook deploy:storybook",
     "clean": "gatsby clean",
     "update": "ncu -u",
-    "validate": "npm-run-all --parallel lint test test:size:bundlesize"
+    "validate": "npm-run-all --parallel lint test test:size:bundlesize",
+    "code:generate": "graphql-codegen --config codegen.yml"
   },
   "bundlesize": [
     {
