fix: build script

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,15 @@
 {
-  "plugins": [["@babel/plugin-proposal-decorators", { "legacy": true }]],
+  "plugins": [
+    "babel-plugin-styled-components",
+    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+  ],
   "presets": [
     [
       "babel-preset-gatsby",
       {
         "targets": {
-          "browsers": [">0.25%", "not ie 11", "not op_mini all"]
+          "browsers": [">0.25%", "not dead"]
         }
       }
     ]
